package game.model;

public record SceltaEffettuata(String idDialogo, String idScelta) {
}